--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ body {
 }
 
 #jumbotron > h2 {
-  color: white;
+  color: black;
   text-align: center;
 }
 
 #jumbotron > a {
   text-decoration: none;
-  background-color: white;
+  background-color: black;
   font-size: 1.5em;
   padding: 1.5rem;
   border-radius: 10px;
